--- a/firmware/kivipallur_firmware_3.0/kivipallur_firmware_3.0.ioc
+++ b/firmware/kivipallur_firmware_3.0/kivipallur_firmware_3.0.ioc
@@ -112,9 +112,9 @@ PA0.GPIO_Label=MOT2-PWM_1
 PA0.Locked=true
 PA0.Signal=S_TIM2_CH1
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=MOT2-PWM_2
+PA1.GPIO_Label=MOT2_suund
 PA1.Locked=true
-PA1.Signal=S_TIM2_CH2
+PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=MOT3-PWM_2
 PA10.Signal=S_TIM2_CH4
@@ -132,8 +132,9 @@ PA15.GPIOParameters=GPIO_Label
 PA15.GPIO_Label=MOT3-ENC_1
 PA15.Signal=S_TIM8_CH1
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=MOT3-PWM_1
-PA2.Signal=S_TIM2_CH3
+PA2.GPIO_Label=MOT3_suund
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=TRW-PWM_1
 PA3.Signal=S_TIM15_CH2
@@ -154,8 +155,9 @@ PA7.GPIO_Label=AIM-servo_PWM
 PA7.Locked=true
 PA7.Signal=S_TIM17_CH1
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=MOT1-PWM_1
-PA8.Signal=S_TIM1_CH1
+PA8.GPIO_Label=MOT1_suund
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=MOT1-PWM_2
 PA9.Signal=S_TIM1_CH2
@@ -273,16 +275,10 @@ SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
 SH.S_TIM16_CH1.ConfNb=1
 SH.S_TIM17_CH1.0=TIM17_CH1,PWM Generation1 CH1
 SH.S_TIM17_CH1.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
-SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,PWM Generation3 CH3
-SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
@@ -297,9 +293,8 @@ SH.S_TIM8_CH1.0=TIM8_CH1,Encoder_Interface
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,Encoder_Interface
 SH.S_TIM8_CH2.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM1.IPParameters=Channel-PWM Generation2 CH2
 TIM15.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM15.IPParameters=Channel-PWM Generation2 CH2,Prescaler
 TIM15.Prescaler=45
@@ -310,14 +305,18 @@ TIM17.Channel=TIM_CHANNEL_1
 TIM17.IPParameters=Channel,Prescaler
 TIM17.Prescaler=45
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3,PeriodNoDither
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,PeriodNoDither
 TIM2.PeriodNoDither=65535
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IPParameters=EncoderMode
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
+TIM4.IPParameters=EncoderMode
 TIM6.IPParameters=TIM_MasterOutputTrigger,Prescaler
 TIM6.Prescaler=20
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM8.EncoderMode=TIM_ENCODERMODE_TI12
+TIM8.IPParameters=EncoderMode
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
