--- a/firmware/kivipallur_firmware_3.0/kivipallur_firmware_3.0.ioc
+++ b/firmware/kivipallur_firmware_3.0/kivipallur_firmware_3.0.ioc
@@ -223,52 +223,51 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM8_Init-TIM8-false-HAL-true,8-MX_TIM17_Init-TIM17-false-HAL-true,9-MX_TIM16_Init-TIM16-false-HAL-true,10-MX_TIM4_Init-TIM4-false-HAL-true,11-MX_TIM15_Init-TIM15-false-HAL-true,12-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,13-MX_DMA_Init-DMA-false-HAL-true,14-MX_ADC1_Init-ADC1-false-HAL-true,15-MX_CRC_Init-CRC-false-HAL-true,16-MX_TIM6_Init-TIM6-false-HAL-true
-RCC.ADC12Freq_Value=170000000
-RCC.AHBFreq_Value=170000000
-RCC.APB1Freq_Value=170000000
-RCC.APB1TimFreq_Value=170000000
-RCC.APB2Freq_Value=170000000
-RCC.APB2TimFreq_Value=170000000
+RCC.ADC12Freq_Value=160000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1Freq_Value=160000000
+RCC.APB1TimFreq_Value=160000000
+RCC.APB2Freq_Value=160000000
+RCC.APB2TimFreq_Value=160000000
 RCC.CK48CLockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=170000000
+RCC.CortexFreq_Value=160000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=170000000
-RCC.FDCANFreq_Value=170000000
+RCC.FCLKCortexFreq_Value=160000000
+RCC.FDCANFreq_Value=160000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=170000000
+RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=170000000
-RCC.I2C2Freq_Value=170000000
-RCC.I2C3Freq_Value=170000000
-RCC.I2SFreq_Value=170000000
-RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLM,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=170000000
-RCC.LPUART1Freq_Value=170000000
+RCC.I2C1Freq_Value=160000000
+RCC.I2C2Freq_Value=160000000
+RCC.I2C3Freq_Value=160000000
+RCC.I2SFreq_Value=160000000
+RCC.IPParameters=ADC12Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CK48CLockSelection,CRSFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQ,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=160000000
+RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=16000000
-RCC.PLLM=RCC_PLLM_DIV4
-RCC.PLLN=85
-RCC.PLLPoutputFreq_Value=170000000
+RCC.PLLN=20
+RCC.PLLPoutputFreq_Value=160000000
 RCC.PLLQ=RCC_PLLQ_DIV6
-RCC.PLLQoutputFreq_Value=56666666.666666664
-RCC.PLLRCLKFreq_Value=170000000
-RCC.PWRFreq_Value=170000000
+RCC.PLLQoutputFreq_Value=53333333.333333336
+RCC.PLLRCLKFreq_Value=160000000
+RCC.PWRFreq_Value=160000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=170000000
-RCC.SYSCLKFreq_VALUE=170000000
+RCC.SAI1Freq_Value=160000000
+RCC.SYSCLKFreq_VALUE=160000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=144000000
-RCC.USART1Freq_Value=170000000
-RCC.USART2Freq_Value=170000000
+RCC.USART1Freq_Value=160000000
+RCC.USART2Freq_Value=160000000
 RCC.USART3Freq_Value=144000000
 RCC.USBFreq_Value=48000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=340000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=320000000
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.S_TIM15_CH2.0=TIM15_CH2,PWM Generation2 CH2
@@ -298,8 +297,9 @@ SH.S_TIM8_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation2 CH2
 TIM15.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM15.IPParameters=Channel-PWM Generation2 CH2,Prescaler
-TIM15.Prescaler=45
+TIM15.IPParameters=Channel-PWM Generation2 CH2,Prescaler,PeriodNoDither
+TIM15.PeriodNoDither=63999
+TIM15.Prescaler=49
 TIM16.Channel=TIM_CHANNEL_1
 TIM16.IPParameters=Channel,Prescaler
 TIM16.Prescaler=45
